--- a/environment.yml
+++ b/environment.yml
@@ -36,6 +36,5 @@ dependencies:
       - pyspark==3.1.2
       - delta-spark==1.0.1
       - tensorflow-cpu==2.8.0 # in Databricks 9.1 it's actually 2.6.0, but for the sake of compilation simplicity we use 2.8.0 here
-      - horovod[tensorflow]==0.22.1
-      - horovod[spark]==0.22.1
+      - keras==2.8.0
       - petastorm==0.11.2
