--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -11,33 +11,38 @@ jobs:
   ci-pipeline:
 
     runs-on: ubuntu-latest
+
     strategy:
       max-parallel: 4
+      matrix:
+        python-version: 3.8.10
 
     env:
       DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
-      DATABRICKS_TOKEN:  ${{ secrets.DATABRICKS_TOKEN }}
+      DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
 
     steps:
-      - uses: actions/checkout@v1
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      # conda setup
+      - uses: actions/checkout@v2
+
+      - name: cache conda
+        uses: actions/cache@v2
+        env:
+          # Increase this value to reset cache if required
+          CACHE_NUMBER: 0
         with:
-          python-version: 3.8.10
+          path: ~/conda_pkgs_dir
+          key:
+            ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{hashFiles('environment.yml') }}
 
-      - name: Install pip
-        run: |
-          python -m pip install --upgrade pip
-
-      - name: Install dependencies and project in dev mode
-        run: |
-          pip install -r unit-requirements.txt
-          pip install -e .
-
-      - name: Run unit tests
-        run: |
-          echo "Launching unit tests"
-          pytest tests/unit
+      - name: setup environment
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+          activate-environment: dbx_scalable_dl
+          channel-priority: strict
+          environment-file: environment.yml
+          use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
 
 
