--- a/environment.yml
+++ b/environment.yml
@@ -31,6 +31,7 @@ dependencies:
   - pytest-cov
   - black
   - pip:
+      # dev-related
       - dbx
       # env-related dependencies
       - pyspark==3.1.2
@@ -38,4 +39,3 @@ dependencies:
       - tensorflow-cpu==2.8.0 # in Databricks 9.1 it's actually 2.6.0, but for the sake of compilation simplicity we use 2.8.0 here
       - keras==2.8.0
       - petastorm==0.11.2
-      - locust
