--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: 3.8.10
+        python-version: [ 3.8.10 ]
 
     env:
       DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
