--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -22,6 +22,7 @@ jobs:
       DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
 
     steps:
+
       - name: checkout
         uses: actions/checkout@v2
 
@@ -46,10 +47,7 @@ jobs:
           environment-file: environment.yml
           use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
 
-      -name: verify pip
-        run: which pip
-
-#      - name: install horovod
-#        run: HOROVOD_WITH_TENSORFLOW=1 pip install "horovod[tensorflow,spark]==0.24.0"
+      - name: install horovod
+        run: HOROVOD_WITH_TENSORFLOW=1 pip install "horovod[tensorflow,spark]==0.24.0"
 
 
