--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -21,6 +21,10 @@ jobs:
       DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
       DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
 
+    defaults:
+      run:
+        shell: bash -l {0}
+
     steps:
 
       - name: checkout
@@ -47,7 +51,7 @@ jobs:
           environment-file: environment.yml
           use-only-tar-bz2: true # IMPORTANT: This needs to be set for caching to work properly!
 
-      - name: install horovod
-        run: HOROVOD_WITH_TENSORFLOW=1 pip install "horovod[tensorflow,spark]==0.24.0"
+#      - name: install horovod
+#        run: HOROVOD_WITH_TENSORFLOW=1 pip install "horovod[tensorflow,spark]==0.24.0"
 
 
