add build and test to ci

--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -31,5 +31,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: run tests
+        run: make test
 
 
