--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -35,7 +35,7 @@ jobs:
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u $GITHUB_ACTOR --password-stdin
 
       - name: pull cached image
-        run: docker pull docker.pkg.github.com/$GITHUB_REPOSITORY/dbx_scalable_dl
+        run: docker pull docker.pkg.github.com/$GITHUB_REPOSITORY/dbx_scalable_dl || true # true switch for case when there is no image to pull
 
       - name: build test image
         run: docker build -t dbx_scalable_dl --file=Dockerfile.dev . --cache-from=docker.pkg.github.com/$GITHUB_REPOSITORY/dbx_scalable_dl
