--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -30,6 +30,9 @@ jobs:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: login to registry
+        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u $GITHUB_ACTOR --password-stdin
+
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
