--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -30,9 +30,6 @@ jobs:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: login to registry
-        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login docker.pkg.github.com -u $GITHUB_ACTOR --password-stdin
-
       - name: Cache Docker layers
         uses: actions/cache@v2
         with:
@@ -51,8 +48,9 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
+
       - name: run tests
-        run: docker run dbx_scalable_dl:latest date
+        run: docker run dbx_scalable_dl date
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
