--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           file: Dockerfile.ci-test
           context: .
-          push: false
+          push: true
           tags: dbx_scalable_dl:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
