--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+        with:
+          driver-opts: network=host
 
       - name: Cache Docker layers
         uses: actions/cache@v2
@@ -39,26 +41,18 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: build
-        run: |
-          docker build \
-            --cache-from type=local,src=/tmp/.buildx-cache \
-            --cache-to type=local,dest=/tmp/.buildx-cache-new,mode=max \
-            --tag dbx_scalable_dl \
-            --file Dockerfile.ci-test .
-
-#      - name: build
-#        uses: docker/build-push-action@v2
-#        with:
-#          file: Dockerfile.ci-test
-#          context: .
-#          push: true
-#          tags: dbx_scalable_dl:latest
-#          cache-from: type=local,src=/tmp/.buildx-cache
-#          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+        uses: docker/build-push-action@v2
+        with:
+          file: Dockerfile.ci-test
+          context: .
+          push: true
+          tags: localhost:5000/renardeinside/dbx_scalable_dl:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
 
-      - name: run tests
-        run: docker run dbx_scalable_dl date
+#      - name: run tests
+#        run: docker run dbx_scalable_dl date
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
