--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -29,8 +29,6 @@ jobs:
 
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-        with:
-          driver-opts: network=host
 
       - name: Cache Docker layers
         uses: actions/cache@v2
@@ -40,13 +38,20 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: build
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.ci-test
           context: .
           push: true
-          tags: localhost:5000/renardeinside/dbx_scalable_dl:latest
+          tags: dbx_scalable_dl:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
