--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -30,7 +30,7 @@ jobs:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Cache Docker layers
+      - name: cache Docker layers
         uses: actions/cache@v2
         with:
           path: /tmp/.buildx-cache
@@ -38,7 +38,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: Login to GitHub Container Registry
+      - name: login to ghcr.io
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -51,7 +51,7 @@ jobs:
           file: Dockerfile.ci-test
           context: .
           push: true
-          tags: dbx_scalable_dl:latest
+          tags: ghcr.io/renardeinside/dbx_scalable_dl:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
