--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -56,8 +56,8 @@ jobs:
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
 
-#      - name: run tests
-#        run: docker run dbx_scalable_dl date
+      - name: run tests
+        run: docker run ghcr.io/renardeinside/dbx_scalable_dl:latest date
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
