--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -57,7 +57,7 @@ jobs:
 
 
       - name: run tests
-        run: docker run renardeinside/dbx_scalable_dl:latest date
+        run: docker run ghcr.io/renardeinside/dbx_scalable_dl:latest date
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
