--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -55,8 +55,8 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
-#      - name: run tests
-#        run: make ci-test
+      - name: run tests
+        run: make ci-test
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
