--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -17,61 +17,48 @@ custom:
   model-builder-cluster-single-node: &model-builder-cluster-single-node
     new_cluster:
       <<: [ *basic-gpu-cluster-props ]
-      spark_conf:
-        "spark.master": "local[*, 4]"
-        "spark.databricks.cluster.profile": "singleNode"
-      driver_instance_pool_name: dbx-scalable-dl-demo
-      instance_pool_name: dbx-scalable-dl-demo
+      driver_node_type_id: "g5.xlarge" # we choose the smallest and cheapest GPU since driver resources won't be used
+      node_type_id: "p3.2xlarge"
+      num_workers: 1
       aws_attributes:
-        instance_profile_name: !ENV ${AWS_INSTANCE_PROFILE_NAME}
-      num_workers: 0
-      custom_tags:
-        "ResourceClass": "SingleNode"
+        ebs_volume_count: 1
+        ebs_volume_size: 32
 
   model-builder-cluster-multi-node: &model-builder-cluster-multi-node
     new_cluster:
       <<: [ *basic-gpu-cluster-props ]
-      driver_instance_pool_name: dbx-scalable-dl-demo
-      instance_pool_name: dbx-scalable-dl-demo
-      instance_profile_name: !ENV ${AWS_INSTANCE_PROFILE_NAME}
-      num_workers: 2
+      driver_node_type_id: "g5.xlarge" # we choose the smallest and cheapest GPU since driver resources won't be used
+      node_type_id: "p3.2xlarge"
+      num_workers: 4
       aws_attributes:
-        instance_profile_name: !ENV ${AWS_INSTANCE_PROFILE_NAME}
+        ebs_volume_count: 1
+        ebs_volume_size: 32
 
   data-loader-launch: &data-loader-launch
     spark_python_task:
       python_file: "file://dbx_scalable_dl/tasks/data_loader.py"
       parameters: [ "--conf-file", "file:fuse://conf/params/data_loader.yml" ]
 
-  model-builder-launch: &model-builder-launch
+  model-builder-launch-sn: &model-builder-launch-sn
     spark_python_task:
       python_file: "file://dbx_scalable_dl/tasks/model_builder.py"
-      parameters: [ "--conf-file", "file:fuse://conf/params/model_builder.yml" ]
+      parameters: [ "--conf-file", "file:fuse://conf/params/model_builder_sn.yml" ]
+
+  model-builder-launch-mn: &model-builder-launch-mn
+    spark_python_task:
+      python_file: "file://dbx_scalable_dl/tasks/model_builder.py"
+      parameters: [ "--conf-file", "file:fuse://conf/params/model_builder_mn.yml" ]
 
 # please note that we're using FUSE reference for config file, hence we're going to load this file using its local FS path
 environments:
   default:
     strict_path_adjustment_policy: true
     jobs:
-      - name: "dbx_scalable_dl"
-        job_clusters:
-          - job_cluster_key: "data-loader"
-            <<: *data-loader-cluster
-          - job_cluster_key: "model-builder"
-            <<: *model-builder-cluster-single-node
-        tasks:
-          - task_key: "data-loader"
-            job_cluster_key: "data-loader"
-            <<: *data-loader-launch
-          - task_key: "model_builder"
-            depends_on:
-              - task_key: "data-loader"
-            job_cluster_key: "model-builder"
-            <<: *model-builder-launch
-      - name: "dbx-scalable-dl-data-loader-dev"
+      - name: "dbx-scalable-dl-data-loader"
         <<: [ *data-loader-launch, *data-loader-cluster ]
-      - name: "dbx-scalable-dl-model-builder-dev"
-        <<: [ *model-builder-launch, *model-builder-cluster-single-node ]
-
+      - name: "dbx-scalable-dl-model-builder-sn" # sn = single node
+        <<: [ *model-builder-launch-sn, *model-builder-cluster-single-node ]
+      - name: "dbx-scalable-dl-model-builder-mn" # mn = multi node
+        <<: [ *model-builder-launch-mn, *model-builder-cluster-multi-node ]
 
 
