--- a/conf/params/model_builder_mn.yml
+++ b/conf/params/model_builder_mn.yml
@@ -1,4 +1,4 @@
-batch_size: 128
+batch_size: 8192
 database: "dbx_scalable_dl_demo"
 table: "ratings"
 cache_dir: "file:///dbfs/tmp/petastorm/cache"
@@ -6,3 +6,7 @@ num_epochs: 10
 model_name: "dbx_scalable_dl_demo"
 mlflow:
   experiment: "/Shared/dbx_scalable_dl_demo"
+metric_collection:
+  request_interval: 20 # in seconds
+  database: "dbx_scalable_dl_demo"
+  table: "metrics"
