--- a/environment.yml
+++ b/environment.yml
@@ -31,7 +31,9 @@ dependencies:
   - pip:
       # dev-related
       - dbx
+      - pytest-httpserver
       # env-related dependencies
       - pyspark==3.1.2
       - delta-spark==1.0.1
       - petastorm==0.11.2
+      - tensorflow==2.8.0
