fix coverage link

--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -17,9 +17,14 @@ custom:
   model-builder-cluster-single-node: &model-builder-cluster-single-node
     new_cluster:
       <<: [ *basic-gpu-cluster-props ]
-      driver_node_type_id: "g5.xlarge" # we choose the smallest and cheapest GPU since driver resources won't be used
+      driver_node_type_id: "p3.2xlarge" # we choose the smallest and cheapest GPU since driver resources won't be used
       node_type_id: "p3.2xlarge"
-      num_workers: 1
+      num_workers: 0
+      spark_conf:
+        "spark.databricks.cluster.profile": "singleNode"
+        "spark.master": "local[*, 4]"
+      custom_tags:
+        "ResourceClass": "SingleNode"
       aws_attributes:
         ebs_volume_count: 1
         ebs_volume_size: 32
