fix mlflow logging

--- a/conf/deployment.yml
+++ b/conf/deployment.yml
@@ -14,11 +14,12 @@ custom:
       aws_attributes:
         first_on_demand: 1
 
+
   model-builder-cluster-single-node: &model-builder-cluster-single-node
     new_cluster:
       <<: [ *basic-gpu-cluster-props ]
-      driver_node_type_id: "p3.2xlarge" # we choose the smallest and cheapest GPU since driver resources won't be used
-      node_type_id: "p3.2xlarge"
+      driver_node_type_id: "g5.xlarge"
+      node_type_id: "g5.xlarge"
       num_workers: 0
       spark_conf:
         "spark.databricks.cluster.profile": "singleNode"
