--- a/conf/params/model_builder_sn.yml
+++ b/conf/params/model_builder_sn.yml
@@ -1,10 +1,10 @@
-batch_size: 40000
+batch_size: 8192
 database: "dbx_scalable_dl_demo"
 table: "ratings"
 cache_dir: "file:///dbfs/tmp/petastorm/cache"
-num_epochs: 10
+num_epochs: 20
 model_name: "dbx_scalable_dl_demo"
-dataset_size_limit: 200000
+dataset_size_limit: 1000000
 mlflow:
   experiment: "/Shared/dbx_scalable_dl_demo"
 metric_collection:
