--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -20,6 +20,9 @@ SHELL ["/bin/bash", "--login", "-c"]
 
 ENV PATH="/opt/conda/envs/dbx_scalable_dl/bin:$PATH"
 
+RUN --mount=type=cache,target=$PIP_CACHE_DIR pip install tensorflow-cpu==2.8.0 keras==2.8.0
+RUN --mount=type=cache,target=$PIP_CACHE_DIR HOROVOD_WITH_TENSORFLOW=1 pip install "horovod[tensorflow,spark]==0.24.0"
+
 ADD . .
 
 RUN --mount=type=cache,target=$PIP_CACHE_DIR pip install -e .
