--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -30,13 +30,13 @@ jobs:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+#      - name: cache Docker layers
+#        uses: actions/cache@v2
+#        with:
+#          path: /tmp/.buildx-cache
+#          key: ${{ runner.os }}-buildx-${{ github.sha }}
+#          restore-keys: |
+#            ${{ runner.os }}-buildx-
 
       - name: login to ghcr.io
         uses: docker/login-action@v1
