--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -23,6 +23,8 @@ ENV PATH="/opt/conda/envs/dbx_scalable_dl/bin:$PATH"
 RUN --mount=type=cache,target=$PIP_CACHE_DIR pip install tensorflow-cpu==2.8.0 keras==2.8.0
 RUN --mount=type=cache,target=$PIP_CACHE_DIR HOROVOD_WITH_TENSORFLOW=1 pip install "horovod[tensorflow,spark]==0.24.0"
 
+# STEPS BELOW ONLY REQUIRED FOR DEVELOPMENT OF THE PROJECT ITSELF, PLEASE OMIT THEM IF YOU'RE GOING TO DEVELOP A PROJECT WHICH IS BASED ON NOCTURNE
+
 ADD . .
 
 RUN --mount=type=cache,target=$PIP_CACHE_DIR pip install -e .
