--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -8,6 +8,8 @@ on:
       - 'v*' # this tag type is used for release pipelines
     paths-ignore:
       - 'README.rst'
+      - '.github/workflows/on-docker-release.yml'
+      - 'docker/Dockerfile.base'
 
 jobs:
   ci-pipeline:
@@ -30,35 +32,35 @@ jobs:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: cache Docker layers
-        uses: actions/cache@v2
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: build
-        uses: docker/build-push-action@v2
-        with:
-          file: Dockerfile.dev
-          context: .
-          load: true
-          tags: ghcr.io/renardeinside/nocturne:ci
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-
-      - name: run tests
-        run: make ci-test
-
-      # Temp fix
-      # https://github.com/docker/build-push-action/issues/252
-      # https://github.com/moby/buildkit/issues/1896
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-      - name: publish test coverage
-        uses: codecov/codecov-action@v2
+#      - name: cache Docker layers
+#        uses: actions/cache@v2
+#        with:
+#          path: /tmp/.buildx-cache
+#          key: ${{ runner.os }}-buildx-${{ github.sha }}
+#          restore-keys: |
+#            ${{ runner.os }}-buildx-
+#
+#      - name: build
+#        uses: docker/build-push-action@v2
+#        with:
+#          file: Dockerfile.dev
+#          context: .
+#          load: true
+#          tags: ghcr.io/renardeinside/nocturne:ci
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+#
+#      - name: run tests
+#        run: make ci-test
+#
+#      # Temp fix
+#      # https://github.com/docker/build-push-action/issues/252
+#      # https://github.com/moby/buildkit/issues/1896
+#      - name: Move cache
+#        run: |
+#          rm -rf /tmp/.buildx-cache
+#          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+#
+#      - name: publish test coverage
+#        uses: codecov/codecov-action@v2
 
