--- a/.github/workflows/on-docker-release.yml
+++ b/.github/workflows/on-docker-release.yml
@@ -36,7 +36,7 @@ jobs:
       - name: build
         uses: docker/build-push-action@v2
         with:
-          file: Dockerfile.dev
+          file: docker/Dockerfile.base
           context: .
           load: true
           tags: ghcr.io/renardeinside/nocturne-base:latest
