--- a/.github/workflows/on-docker-release.yml
+++ b/.github/workflows/on-docker-release.yml
@@ -3,11 +3,11 @@ name: Docker release pipeline
 on:
   push:
     tags:
-      - 'v-docker-*' # Push events to matching v-docker-*, ie v-docker-0.0.1
+      - 'release/docker/base/*' # Push events matching tag release/docker/base/*, for example release/docker/base/0.0.1
 
 
 jobs:
-  docker-release-pipeline:
+  docker-base-release-pipeline:
 
     runs-on: ubuntu-latest
 
@@ -18,6 +18,11 @@ jobs:
 
       - name: checkout
         uses: actions/checkout@v2
+
+      - name: Set env
+        run: |
+          BASE_RELEASE_TAG=$(echo ${GITHUB_REF_NAME} | cut -f4 -d"/")
+          echo "BASE_RELEASE_TAG=${BASE_RELEASE_TAG}" >> $GITHUB_ENV
 
       - name: set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -39,12 +44,10 @@ jobs:
           file: docker/Dockerfile.base
           context: .
           load: true
-          tags: ghcr.io/renardeinside/nocturne-base:latest
+          tags: ghcr.io/renardeinside/nocturne-base:latest, ghcr.io/renardeinside/nocturne-base:{{ env.BASE_RELEASE_TAG }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
-      - name: run tests
-        run: make ci-test
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
@@ -53,7 +56,4 @@ jobs:
         run: |
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-      - name: publish test coverage
-        uses: codecov/codecov-action@v2
 
