--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -6,6 +6,7 @@ on:
       - '**'
     tags-ignore:
       - 'v*' # this tag type is used for release pipelines
+      - 'release/docker/base/*' # this tag type is used for docker base pipelines
     paths-ignore:
       - 'README.rst'
       - '.github/workflows/on-docker-release.yml'
