--- a/.github/workflows/on-docker-release.yml
+++ b/.github/workflows/on-docker-release.yml
@@ -30,6 +30,13 @@ jobs:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: login to ghcr.io
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: cache Docker layers
         uses: actions/cache@v2
         with:
@@ -43,7 +50,7 @@ jobs:
         with:
           file: docker/Dockerfile.base
           context: .
-          load: true
+          push: true
           tags: ghcr.io/renardeinside/nocturne-base:latest, ${{ env.RELEASE_TAG }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
