--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -45,7 +45,7 @@ RUN --mount=type=cache,target=$PIP_CACHE_DIR pip install poetry
 
 COPY poetry.lock pyproject.toml ./
 
-RUN --mount=type=cache,target=$POETRY_CACHE_DIR poetry config virtualenvs.create false && poetry install -n
+RUN --mount=type=cache,target=$POETRY_CACHE_DIR poetry config virtualenvs.create false && poetry install -n --no-root
 
 RUN poetry cache clear . --all -n
 
