--- a/.github/workflows/on-docker-release.yml
+++ b/.github/workflows/on-docker-release.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set env
         run: |
           RELEASE_TAG_POSTFIX=$(echo ${GITHUB_REF_NAME} | cut -f4 -d"/")
-          echo "RELEASE_TAG=ghcr.io/renardeinside/nocturne-base:${RELEASE_TAG_POSTFIX}" >> $GITHUB_ENV
+          echo "RELEASE_TAG=renardeinside/nocturne-base:${RELEASE_TAG_POSTFIX}" >> $GITHUB_ENV
 
       - name: set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -30,12 +30,11 @@ jobs:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: login to ghcr.io
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: cache Docker layers
         uses: actions/cache@v2
@@ -51,7 +50,7 @@ jobs:
           file: docker/Dockerfile.base
           context: .
           push: true
-          tags: ghcr.io/renardeinside/nocturne-base:latest, ${{ env.RELEASE_TAG }}
+          tags: renardeinside/nocturne-base:latest, ${{ env.RELEASE_TAG }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
