--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,11 +1,10 @@
 FROM ubuntu:20.04
 
 ENV PIP_CACHE_DIR=/opt/pip/.cache
-ENV POETRY_CACHE_DIR=/root/.cache/pypoetry
-ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHON_VERSION=3.8
 # Keeps Python from generating .pyc files in the container
 ENV PYTHONDONTWRITEBYTECODE=1
+ENV DEBIAN_FRONTEND=noninteractive
 
 
 WORKDIR /usr/src/project
@@ -33,8 +32,6 @@ RUN apt-get update && apt-get install -y --allow-downgrades --allow-change-held-
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 
-
-
 RUN ln -s /usr/bin/python${PYTHON_VERSION} /usr/bin/python
 
 RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
@@ -43,10 +40,37 @@ RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
 
 RUN --mount=type=cache,target=$PIP_CACHE_DIR pip install poetry
 
-COPY poetry.lock pyproject.toml ./
+COPY pyproject.toml poetry.lock ./
 
-RUN --mount=type=cache,target=$POETRY_CACHE_DIR poetry config virtualenvs.create false && poetry install -n --no-root
 
-RUN poetry cache clear . --all -n
+# Currently poetry install is significantly slower than pip install, so we're creating a
+# requirements.txt output and running pip install with it.
+# Follow this issue: https://github.com/python-poetry/poetry/issues/338
+# Setting --without-hashes because of this issue: https://github.com/pypa/pip/issues/4995
+
+RUN --mount=type=cache,target=$PIP_CACHE_DIR poetry config virtualenvs.create false \
+                && poetry export --without-hashes -f requirements.txt \
+                |  HOROVOD_WITH_TENSORFLOW=1 poetry run pip install -r /dev/stdin
+
+
+
+
+
+
+
+
+#
+#
+#
+#
+
+
+#RUN --mount=type=cache,target=$PIP_CACHE_DIR pip install poetry
+#
+#COPY poetry.lock pyproject.toml ./
+#
+#RUN mkdir -p /opt/.poetry/ && poetry export
+#
+#RUN poetry cache clear . --all -n
 
 
