--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ horovod = {extras = ["spark", "tensorflow"], version = "^0.24.2"}
 dbx = "^0.4.1"
 pytest = "^7.1.1"
 pre-commit = "^2.17.0"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
