--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -11,8 +11,6 @@ on:
       - 'release/docker/base/*' # this tag type is used for docker base pipelines
     paths-ignore:
       - 'README.rst'
-      - '.github/workflows/on-docker-release.yml'
-      - 'docker/Dockerfile.base'
 
 jobs:
   ci-pipeline:
@@ -35,23 +33,23 @@ jobs:
       - name: set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-#      - name: cache Docker layers
-#        uses: actions/cache@v2
-#        with:
-#          path: /tmp/.buildx-cache
-#          key: ${{ runner.os }}-buildx-${{ github.sha }}
-#          restore-keys: |
-#            ${{ runner.os }}-buildx-
-#
-#      - name: build
-#        uses: docker/build-push-action@v2
-#        with:
-#          file: Dockerfile.dev
-#          context: .
-#          load: true
-#          tags: ghcr.io/renardeinside/nocturne:ci
-#          cache-from: type=local,src=/tmp/.buildx-cache
-#          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+      - name: cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
+      - name: build
+        uses: docker/build-push-action@v2
+        with:
+          file: Dockerfile.base
+          context: .
+          load: true
+          tags: nocturne-base
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 #
 #      - name: run tests
 #        run: make ci-test
