--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -1,12 +1,13 @@
 FROM nocturne-base
 
-ENV POETRY_CACHE_DIR=/root/.cache/pypoetry
+ENV PIP_CACHE_DIR=/opt/pip/.cache
 
 
 WORKDIR /usr/src/project
 
-COPY .. .
+COPY dev-requirements.txt .
+RUN --mount=type=cache,target=$PIP_CACHE_DIR pip install -r dev-requirements.txt
 
-RUN --mount=type=cache,target=$POETRY_CACHE_DIR poetry config virtualenvs.create false && poetry install -n
+COPY . .
 
-
+RUN pip install -e .
