--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -51,28 +51,28 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
-      - name: build dev
-        uses: docker/build-push-action@v2
-        with:
-          file: docker/Dockerfile.dev
-          context: .
-          load: true
-          tags: nocturne-dev
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-
+#      - name: build dev
+#        uses: docker/build-push-action@v2
+#        with:
+#          file: docker/Dockerfile.dev
+#          context: .
+#          load: true
+#          tags: nocturne-dev
+#          cache-from: type=local,src=/tmp/.buildx-cache
+#          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
+#
 #
 #      - name: run tests
 #        run: make ci-test
-#
-#      # Temp fix
-#      # https://github.com/docker/build-push-action/issues/252
-#      # https://github.com/moby/buildkit/issues/1896
-#      - name: Move cache
-#        run: |
-#          rm -rf /tmp/.buildx-cache
-#          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-#
+
+      # Temp fix
+      # https://github.com/docker/build-push-action/issues/252
+      # https://github.com/moby/buildkit/issues/1896
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+
 #      - name: publish test coverage
 #        uses: codecov/codecov-action@v2
 
