--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -51,6 +51,10 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
+      - name: list images
+        run: |
+          docker image ls
+
 #      - name: build dev
 #        uses: docker/build-push-action@v2
 #        with:
