--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -41,7 +41,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: build base
+      - name: build ci container
         uses: docker/build-push-action@v2
         with:
           file: docker/Dockerfile.ci
@@ -51,19 +51,8 @@ jobs:
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
 
-#      - name: build dev
-#        uses: docker/build-push-action@v2
-#        with:
-#          file: docker/Dockerfile.dev
-#          context: .
-#          load: true
-#          tags: nocturne-dev
-#          cache-from: type=local,src=/tmp/.buildx-cache
-#          cache-to: type=local,dest=/tmp/.buildx-cache-new,mode=max
-#
-#
-#      - name: run tests
-#        run: make ci-test
+      - name: run tests
+        run: make ci-test
 
       # Temp fix
       # https://github.com/docker/build-push-action/issues/252
