--- a/.github/workflows/onrelease.yml
+++ b/.github/workflows/onrelease.yml
@@ -13,10 +13,27 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [ 3.7 ]
+        python-version: [ 3.8 ]
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Build dist
+        run: python setup.py clean bdist_wheel
+
+      - name: Install dependencies
+        run: pip install -U -r dev-requirements.txt
+
+      - name: Publish a Python distribution to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
 
       - name: Create Release
         id: create_release
@@ -30,4 +47,3 @@ jobs:
             Release for version ${{ github.ref }}.
           draft: false
           prerelease: false
-
